# CppCourse

./: README.md
GaussianFilter/: Makefile  blur.cpp  blur.hpp  main.cpp
GaussianFilter/visual_test/: main.py  requirements.txt  run.sh
GeometryMorphing/: CMakeLists.txt  geometry_cube.cpp  geometry_cube.hpp  main.cpp  main_widget.cpp  main_widget.hpp  morph_window.cpp  morph_window.hpp
GeometryMorphing/shaders/: fshader.glsl  vshader.glsl
MatrixOperations/: Makefile  main.cpp  matrices.cpp  matrices.hpp
MatrixOperations/smoke_tests/: err.txt
